crates/aranya-policy-compiler/tests/data/enums/undefined_value_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |     let n = Drink::Tea
  |                    ^^^ variant `Drink::Tea` not defined
